<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_transaction_toolbar"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_delete"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="#fff"
            android:background="@color/colorPrimary"
            app:tabTextColor="#e0e0e0">
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.marklordan.airgead.ui.TransactionActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/transaction_value_input_wrapper"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/transaction_value_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_euro_symbol"
                    android:hint="@string/transaction_amount_title"
                    android:text=" "
                    android:inputType="numberDecimal"
                    android:maxLength="30"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/transaction_desc_input_wrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/transaction_value_input_wrapper"
                app:layout_constraintStart_toStartOf="@+id/transaction_value_input_wrapper"
                app:layout_constraintTop_toBottomOf="@+id/transaction_value_input_wrapper">

                <EditText
                    android:id="@+id/transaction_desc_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_mode_edit"
                    android:hint="@string/transaction_description_title"
                    android:inputType="textCapSentences|textAutoComplete"
                    android:maxLength="30"
                    android:text=" "/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/transaction_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_action_calendar_month"
                android:gravity="center_vertical"
                android:hint="@string/transaction_date_today_title"
                android:maxLength="30"
                android:onClick="showDateDialog"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transaction_desc_input_wrapper"/>

            <Spinner
                android:id="@+id/transaction_category"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/category_label"
                app:layout_constraintTop_toBottomOf="@+id/category_label"/>

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Expense Category"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/transaction_date_input"
                app:layout_constraintTop_toBottomOf="@+id/transaction_date_input"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
