<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.marklordan.airgead.ui.main.MainActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/balance_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/total_balance_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_balance"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textview_account_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_mode_edit"
                    android:drawablePadding="0dp"
                    android:drawableRight="@drawable/ic_mode_edit"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toEndOf="@+id/total_balance_title_textview"
                    app:layout_constraintStart_toStartOf="@+id/total_balance_title_textview"
                    app:layout_constraintTop_toBottomOf="@+id/total_balance_title_textview"
                    tools:text="€13000"/>

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <TextView
                    android:id="@+id/monthly_balance_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Monthly Balance"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toEndOf="@+id/guideline_balance"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textview_account_monthly_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toEndOf="@+id/monthly_balance_title_textview"
                    app:layout_constraintStart_toStartOf="@+id/monthly_balance_title_textview"
                    app:layout_constraintTop_toBottomOf="@+id/monthly_balance_title_textview"
                    tools:text="€1300"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.constraint.Guideline
            android:id="@+id/recent_transactions_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>


        <android.support.v7.widget.CardView
            android:id="@+id/transaction_list_cardview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget_section_card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recent_transaction_recyclerview_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/recent_transactions"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_transactions_guideline"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recent_transaction_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    tools:listitem="@layout/transaction_list_item"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>


        <ProgressBar
            android:id="@+id/transaction_list_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recent_transactions_guideline"/>

        <android.support.v7.widget.CardView
            android:id="@+id/budget_section_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@+id/balance_cardview">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/target_section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="com.marklordan.airgead.ui.main.MainActivity">

                <android.support.constraint.Guideline
                    android:id="@+id/vertical_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <TextView
                    android:id="@+id/savings_target_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:paddingTop="8dp"
                    android:text="Savings Target"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/vertical_divider"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/remaining_budget_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:paddingTop="8dp"
                    android:text="Remaining Budget"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/vertical_divider"/>

                <TextView
                    android:id="@+id/remaining_balance_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="@+id/remaining_budget_textview"
                    app:layout_constraintStart_toStartOf="@+id/remaining_budget_textview"
                    app:layout_constraintTop_toBottomOf="@+id/remaining_budget_textview"
                    tools:text="€1000"/>

                <TextView
                    android:id="@+id/savings_target_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="@+id/savings_target_textview"
                    app:layout_constraintStart_toStartOf="@+id/savings_target_textview"
                    app:layout_constraintTop_toBottomOf="@+id/savings_target_textview"
                    tools:text="€1000"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_transaction_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_add"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_anchor="@id/transaction_list_cardview"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
