...
    <string name="transaction_date_today_title">Today</string>

    <string name="is_expense_transaction">TRANSACTION_TYPE_ID</string>


    <string name="transaction_description">%1$s Description</string>
    <string name="transaction_removed">Transaction removed</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="activity_edit_transaction_details">Edit Transaction</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

...
